# autonomous-runtime-area

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/rust/: .env.example  .gitignore  Cargo.toml  Dockerfile  srebench.yaml
apps/rust/incidents/: SRE-0001.yaml  SRE-0003.yaml  SRE-0006.yaml  SRE-0013.yaml  SRE-0020.yaml
apps/rust/migrations/: 0001_initial.sql
apps/rust/src/: cache.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
apps/rust/src/auth/: extractor.rs  jwt.rs
apps/rust/src/integrations/: stripe.rs
apps/rust/src/routes/: auth.rs  cart.rs  checkout.rs  health.rs  mod.rs  products.rs
apps/rust/tests/: integration_test.rs
client/: package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: AdmissionsTable.tsx  ConditionList.tsx  DischargeCard.tsx  EventCard.tsx  EvidencePanel.tsx  HardestUnsolved.tsx  HeartbeatIcon.tsx  IncidentScore.tsx  LeaderboardClient.tsx  LiveVitals.tsx  OrHeader.tsx  PatchView.tsx  PatientCard.tsx  PatientHeader.tsx  PhaseLane.tsx  PhaseTimeline.tsx  ScoreboardGrid.tsx  (+9 more)
docs/: AGENT_DESIGN.md  APP_MANIFEST_SPEC.md  ARCHITECTURE.md  ENTERPRISE.md  IDEATION.md  INCIDENT_ASSIGNMENT.md  INCIDENT_SPEC.md  PITCH.md  SHOWCASE.md
server/: Dockerfile  main.py  package.json  pyproject.toml
server/sentinel/: agent.py  channel.py  manifest.py  models.py  policy.py  seed.py  vitals.py
server/sentinel/adapters/: factory.py
server/sentinel/adapters/health/: base.py  http.py
server/sentinel/adapters/logs/: base.py  docker.py  file.py
server/sentinel/adapters/metrics/: base.py  prometheus.py
server/sentinel/adapters/runtime/: base.py  docker_compose.py  k8s.py
server/sentinel/prompts/: phase_examples.md  system.md
server/sentinel/tools/: __init__.py  code.py  exec.py  patch.py  signals.py
server/srebench/: injector.py  load_test.py  runner.py  schema.py  scorer.py
server/tests/: test_adapters.py  test_channel.py  test_fixture.py  test_leaderboard.py  test_main.py  test_scorer.py  test_tools.py  test_vitals.py
server/tests/fixtures/sample-app/: Dockerfile  app.py  srebench.yaml
server/tests/fixtures/sample-app/incidents/: SAMPLE-0001.yaml
tests/: sre.ping.spec.ts
(+7 files in other folders)
