[project]
name = "sentinel"
version = "0.1.0"
description = "SREBench platform — app-agnostic SRE agent + eval harness"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.10",
    "prometheus-client>=0.21",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "aiofiles>=23.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "flask>=3.0",
]

[project.scripts]
srebench = "srebench.runner:app"

[tool.setuptools.packages.find]
include = ["sentinel*", "srebench*"]

[tool.hatch.build.targets.wheel]
packages = ["sentinel", "srebench"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
